# deep-agents-fs

./: .env.example  .gitignore  README.md  docker-compose.yml  main-experiments.ipynb  pyproject.toml  report-experiments.md
docker/: Dockerfile.gcsfuse  Dockerfile.local  entrypoint.gcsfuse.sh
modules/: __init__.py  api_service.py  helper.py  settings.py
sample-artifacts/results/20260403_030213/: errors.csv  latency.csv  method_matrix.csv  summary.csv  throughput.csv
tests/: conftest.py
tests/integration/: test_api_local.py
tests/unit/: test_helper.py
