[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agents-fs-experiment"
version = "0.1.0"
description = "Local vs gcsfuse filesystem experiment for Deep Agents long-term memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.4.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
notebook = [
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "jupyter>=1.0.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
deep-fs-api = "modules.api_service:run"

[tool.setuptools]
packages = ["modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
